po: update po/es_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -9,7 +9,7 @@
 # cero <videoalertas@gmail.com>, 2011
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2014
-# ixiam <info@ixiam.com>, 2013-2014
+# ixiam <info@ixiam.com>, 2013-2014,2016
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2011
 # Jon Altuna <jonaltuna@msn.com>, 2015
@@ -23,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-05 15:11+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -112,7 +112,7 @@ msgstr "Tipo Financiero %1"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Page - %1"
-msgstr ""
+msgstr "Página de contribución - %1"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Personal Campaign Page - %1"
@@ -286,7 +286,7 @@ msgstr "Contacto de Honor"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Introduction Text"
-msgstr ""
+msgstr "Texto introductorio de la página de contribución"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recur Frequency Unit"
@@ -298,7 +298,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Min Initial Amount"
-msgstr ""
+msgstr "Cantidad mínima inicial"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Min Amount"
