--- a/po/es_ES/case.po
+++ b/po/es_ES/case.po
@@ -5,7 +5,7 @@
 # Translators:
 # ixiam <info@ixiam.com>, 2013
 # francescbassas <francesc@babu.cat>, 2015
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # Juan Garcia <atc@intellig.es>, 2011
 # Marcela Garcia-Casteblanco <marcegcol@hotmail.com>, 2015
 # Marti <m.prat@ixiam.com>, 2014-2015
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-05 15:07+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -147,7 +147,7 @@ msgstr "Detalles de actividad %1 \"%2\""
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Auto Genrated %1 '%2'"
-msgstr "Actividad auto generada %1 \"%2\""
+msgstr "Actividad auto generada %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Role in Case  %1 '%2'"
