--- a/po/es_ES/provinces.po
+++ b/po/es_ES/provinces.po
@@ -5,7 +5,7 @@
 # Translators:
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2013
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # iWi development <iwidevelopment@gmail.com>, 2012
 # ixiam <info@ixiam.com>, 2013
 # kaotik <kaotiko@gmail.com>, 2011
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-05 15:04+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4236,7 +4236,7 @@ msgstr "La Rioja"
 
 msgctxt "province"
 msgid "Las Palmas"
-msgstr "Las Palmas de Gran Canaria"
+msgstr "Las Palmas"
 
 msgctxt "province"
 msgid "León"
