po: update po/zh_CN/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/financial.po
+++ b/po/zh_CN/financial.po
@@ -14,7 +14,7 @@
 # Joy Zhao <makethru@gmail.com>, 2011-2012
 # Lithium Raffine <rachelli.usa@gmail.com>, 2015
 # Ji Ma <magic.maji@gmail.com>, 2014
-# Mingye Wang <arthur200126@gmail.com>, 2015
+# Mingye Wang <arthur200126@gmail.com>, 2015-2016
 # Mingye Wang (Arthur2e5) <arthur2e5@aosc.xyz>, 2015
 # nonoku <ying0218@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -30,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-06 04:15+0000\n"
+"Last-Translator: Mingye Wang <arthur200126@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -79,11 +79,11 @@ msgid ""
 "This contact(s) can not be permanently deleted because the contact record is"
 " linked to one or more live financial transactions. Deleting this contact "
 "would result in the loss of financial data."
-msgstr ""
+msgstr "此联系人不可以永久删除，因为联系人记录链接到一个或多个活动的金融交易。删除此联系人会导致丢失财务数据。"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "下列表格包含此财务类型的条目：%1"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
