--- a/po/ru_RU/drupal-civicrm.po
+++ b/po/ru_RU/drupal-civicrm.po
@@ -13,14 +13,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
+"PO-Revision-Date: 2016-02-06 14:45+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/civicrm/language/ru/)\n"
+"Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
