po: update po/fr_FR/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/campaign.po
+++ b/po/fr_FR/campaign.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-04 10:02+0000\n"
-"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
+"PO-Revision-Date: 2016-02-06 20:57+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -264,13 +264,13 @@ msgstr "Valeur par défaut ?"
 msgid ""
 "This title is already associated with the selected activity type. Please "
 "specify a unique title."
-msgstr "Ce titre est déjà attribué à le type d'activité sélectionné. Vous devez indiquer un titre unique."
+msgstr "Ce titre est déjà attribué au type d'activité sélectionné. Vous devez indiquer un titre unique."
 
 #: CRM/Campaign/Form/Petition.php
 msgid ""
 "This title is already associated with the selected campaign and activity "
 "type. Please specify a unique title."
-msgstr ""
+msgstr "Ce titre est déjà attribué à la campagne sélectionnée. Vous devez indiquer un titre unique."
 
 #: CRM/Campaign/Form/Petition.php
 msgid " Petition has been deleted."
