--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-04 09:37+0000\n"
-"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
+"PO-Revision-Date: 2016-02-06 21:34+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1873,15 +1873,15 @@ msgstr ""
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Test different \"Subject\" lines"
-msgstr ""
+msgstr "Tester des lignes \"Objet\" différentes"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Test different \"From\" lines"
-msgstr ""
+msgstr "Tester des lignes \"Expéditeur\" différentes"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Test entirely different emails"
-msgstr ""
+msgstr "Tester des e-mails totalement différents"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Total Unique Clicks"
