--- a/po/fa_IR/menu.po
+++ b/po/fa_IR/menu.po
@@ -5,6 +5,7 @@
 # Translators:
 # MaghsoudDorani <dorani583@gmail.com>, 2014
 # Hassan Shafiian <hsn.shfn@gmail.com>, 2011,2015
+# mahdi shorbi <mahdishorbi@gmail.com>, 2016
 # Mohammad Amini <m.m.amini11@gmail.com>, 2015
 # Mr Mousvi <irsapro@gmail.com>, 2015
 # peyman firouzkouhi <p.firouzkouhi@gmail.com>, 2015
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-07 07:56+0000\n"
+"Last-Translator: mahdi shorbi <mahdishorbi@gmail.com>\n"
 "Language-Team: Persian (Iran) (http://www.transifex.com/civicrm/civicrm/language/fa_IR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -610,7 +611,7 @@ msgstr "نقشه برداری و مختصات جغرافیایی"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr ""
+msgstr "تنظیمات متفرقه (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -634,7 +635,7 @@ msgstr "یکپارچه سازی پایگاه داده سیستم مدیریت م
 
 msgctxt "menu"
 msgid "Safe File Extension Options"
-msgstr ""
+msgstr "گزینه های ایمن برای پسون فایل"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -739,7 +740,7 @@ msgstr "صفحه اصلی مدیریت ارتباط با مشتریان"
 
 msgctxt "menu"
 msgid "CiviCRM Dashlets"
-msgstr ""
+msgstr "عناصر داشبرد CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1156,7 +1157,7 @@ msgstr "عضویت مجدد"
 
 msgctxt "menu"
 msgid "Optout"
-msgstr ""
+msgstr "خروجی"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -2156,7 +2157,7 @@ msgstr "مدیریت تست های A/B"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "پشتیبانی"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2166,12 +2167,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "پرسیدن یک سوال"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "گرفتن کمک تخصصی"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
