po: update po/fr_FR/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-01-25 21:18+0000\n"
+"PO-Revision-Date: 2016-02-07 20:54+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -477,7 +477,7 @@ msgstr "activer les blocs CiviCRM sur <a href=\"!1\">Administration &raquo; Cons
 msgid ""
 "read about <a href=\"!1\">CiviCRM access permissions</a> and set access "
 "permissions at <a href=\"!2\">Administer CiviCRM &raquo; Access Control</a>."
-msgstr ""
+msgstr "lisez à propos des <a href=\"%1\">droits d'accès CiviCRM</a> et configurez leur accès sur <a href=\"%2\">Administrer >> Contrôle d'Accès</a>"
 
 #: drupal/civicrm.module
 msgid ""
@@ -510,13 +510,13 @@ msgid ""
 "create or administer relationship types (e.g. household member, board "
 "member, spouse...) <a href=\"!1\">CiviCRM &raquo; Administer &raquo; "
 "Relationship Types</a>."
-msgstr ""
+msgstr "créez ou administrez les types de relations (ex : membre du foyer, membre du bureau, épouse...) <a href=\"!1\">CiviCRM &raquo; Administrer les &raquo; Types de Relations</a>."
 
 #: drupal/civicrm.module
 msgid ""
 "create or administer location types (e.g. home, work, school...) <a "
 "href=\"!1\">CiviCRM &raquo; Administer &raquo; Location Types</a>."
-msgstr ""
+msgstr "créez ou administrez les types de lieux (ex : maison, travail, école, ...) <a href=\"!1\">CiviCRM &raquo; Administrer &raquo; les Types de Lieux</a>."
 
 #: drupal/civicrm.module
 msgid ""
