--- a/po/fa_IR/common-components.po
+++ b/po/fa_IR/common-components.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# mahdi shorbi <mahdishorbi@gmail.com>, 2016
 # Mohammad Amini <m.m.amini11@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-07 08:05+0000\n"
+"Last-Translator: mahdi shorbi <mahdishorbi@gmail.com>\n"
 "Language-Team: Persian (Iran) (http://www.transifex.com/civicrm/civicrm/language/fa_IR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,15 +30,15 @@ msgstr "آدرس تصویر"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Name"
-msgstr ""
+msgstr "نام فونت"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Size"
-msgstr ""
+msgstr "سایز فونت"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Style"
-msgstr ""
+msgstr "استایل فونت"
 
 #: CRM/Admin/Form/LocationType.php templates/CRM/Admin/Page/LabelFormats.tpl
 #: templates/CRM/Admin/Page/LocationType.tpl
@@ -62,18 +63,18 @@ msgstr ""
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Insert Tokens"
-msgstr ""
+msgstr "وارد کردن توکن"
 
 #: CRM/Admin/Form/Navigation.php CRM/Report/Form/Case/Detail.php
 #: CRM/Report/Form/Contribute/History.php CRM/Report/Form/Instance.php
 msgid "-- select --"
-msgstr ""
+msgstr "-- انتخاب --"
 
 #: CRM/Admin/Form/OptionValue.php CRM/Admin/Form/Options.php
 #: CRM/Financial/Form/BatchTransaction.php CRM/Report/Form/Mailing/Opened.php
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Opened"
-msgstr ""
+msgstr "باز شده"
 
 #: CRM/Admin/Form/OptionValue.php CRM/Admin/Form/Options.php
 #: CRM/Admin/Form/PaymentProcessor.php
@@ -112,7 +113,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Site URL"
-msgstr ""
+msgstr "آدرس سایت"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Recurring Payments URL"
@@ -120,7 +121,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Button URL"
-msgstr ""
+msgstr "آدرس دکمه"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "API URL"
@@ -130,7 +131,7 @@ msgstr ""
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Billing Mode"
-msgstr ""
+msgstr "نوع پرداخت"
 
 #: CRM/Admin/Form/Preferences/Address.php CRM/Mailing/BAO/Mailing.php
 msgid "Insert Token"
@@ -152,12 +153,12 @@ msgstr ""
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "قبل"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "بعد"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
@@ -167,12 +168,12 @@ msgstr ""
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "Date Field"
-msgstr ""
+msgstr "فیلد تاریخ"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "ضبط فعالیت ها برای ایمیل های خودکار"
 
 #: CRM/Admin/Form/ScheduleReminders.php templates/CRM/Admin/Page/Reminders.tpl
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
