--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-02-04 10:15+0000\n"
-"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
+"PO-Revision-Date: 2016-02-07 20:13+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -411,7 +411,7 @@ msgid ""
 "improvements, target our communications and build the community. If you have"
 " a technical role for this site, be sure to check Keep in Touch to receive "
 "technical updates (a low volume mailing list)."
-msgstr ""
+msgstr "Avez-vous enregistré votre site sur CiviCRM.org ? Si non, merci de prendre quelques minutes pour <a %1>remplir le formulaire d'enregistrement</a> et nous aider à renforcer l'écosystème CiviCRM. L'information collectée nous aidera à prioriser les améliorations, mieux cibler notre communication et construire la communauté. Si vous avez un rôle technique pour ce site, assurez-vous de cocher la case pour recevoir les informations techniques (liste de diffusion à faible trafic)."
 
 #: install/index.php
 msgid ""
