--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-01 20:24+0000\n"
+"PO-Revision-Date: 2016-02-07 20:57+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -6598,7 +6598,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid "Allow CiviMail users to send mailings with a custom Reply-To header."
-msgstr ""
+msgstr "Autoriser les utilisateurs de CiviMail à envoyer des mailings avec un en-tête \"Répondre à\" personnalisé."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
