--- a/po/fa_IR/mailing.po
+++ b/po/fa_IR/mailing.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-02-07 07:54+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Persian (Iran) (http://www.transifex.com/civicrm/civicrm/language/fa_IR/)\n"
 "MIME-Version: 1.0\n"
@@ -1340,7 +1340,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Page/Optout.tpl
 msgid "Optout"
-msgstr ""
+msgstr "خروجی"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Delivery Summary"
