po: update po/de_DE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -11,13 +11,14 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # MichaSeidler <info@euroconsults.eu>, 2011, 2012
 # Joan Nguyen <doannt2909@gmail.com>, 2013
 # Jo <jo@caj-augsburg.de>, 2011-2012
 # Martin Peth <peth@systopia.de>, 2014-2015
 # MichaSeidler <info@euroconsults.eu>, 2011
+# nautilusx, 2016
 # Onsemeliot <onsemeliot@riseup.net>, 2014
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -28,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-19 17:05+0000\n"
+"PO-Revision-Date: 2016-02-08 09:10+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -207,7 +208,7 @@ msgstr "Neue Zuwendung"
 
 msgctxt "menu"
 msgid "Contribution Summary - Chart View"
-msgstr "Zuwendungs-Übersicht - Diagramm-Ansicht"
+msgstr "Zuwendungsübersicht - Diagramm-Ansicht"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -385,7 +386,7 @@ msgstr "Benutzerdefiniertes Feld - bearbeiten"
 
 msgctxt "menu"
 msgid "Custom Field - Move"
-msgstr "Benutzerdefiniertes Feld - Verschieben"
+msgstr "Benutzerdefiniertes Feld - verschieben"
 
 msgctxt "menu"
 msgid "Custom Field - Change Type"
@@ -2118,7 +2119,7 @@ msgstr "Entwickler Dokumente"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Mit Fall verknüpfen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2171,37 +2172,37 @@ msgstr "A/B-Tests verwalten"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Unterstützung"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Erste Schritte"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Eine Frage stellen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Unterstützung von einem Experten bekommen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "Über CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Ihre Installation registrieren"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Mitglied bei CiviCRM werden"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
