--- a/po/de_DE/campaign.po
+++ b/po/de_DE/campaign.po
@@ -7,7 +7,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2015
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
-# Fabian <schuttenberg@systopia.de>, 2014-2015
+# Fabian <schuttenberg@systopia.de>, 2014-2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # MichaSeidler <info@euroconsults.eu>, 2011
 # Jo <jo@caj-augsburg.de>, 2012
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 09:52+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-02-08 09:03+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -406,7 +406,7 @@ msgstr "Hauptinformation"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Ergebnisse"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
