po: update po/de_DE/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/report.po
+++ b/po/de_DE/report.po
@@ -8,7 +8,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014-2015
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # MichaSeidler <info@euroconsults.eu>, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Lutz Pawske <lutz@pawske.de>, 2013
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 10:37+0000\n"
+"PO-Revision-Date: 2016-02-08 09:53+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -91,7 +91,7 @@ msgstr "Kopfzeile der Berichtsinstanz"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Footer"
-msgstr ""
+msgstr "Fußzeile der Berichtsinstanz"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Navigation ID"
@@ -1215,7 +1215,7 @@ msgstr "Klicks: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Opt-Out"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -2108,12 +2108,12 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Fall-Aktivitäten einschließen"
 
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Bitte wählen Sie \"Fall-Aktivitäten einschließen\" um nach Fall-Aktivitäten zu filtern."
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
@@ -2192,15 +2192,15 @@ msgstr "Sortierung"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr ""
+msgstr "Kontakt-Präfix"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Akronym"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr ""
+msgstr "Nachgestellter Namenszusatz"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
@@ -2208,11 +2208,11 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Berufsbezeichnung"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
-msgstr ""
+msgstr "Externe ID"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
@@ -2252,7 +2252,7 @@ msgstr ""
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - Vorlage"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Title and Format"
