po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,7 +47,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 11:09+0000\n"
+"PO-Revision-Date: 2016-02-08 10:04+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -3356,7 +3356,7 @@ msgstr "Kontaktinformationen"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "You do not have permission to edit relationships for this contact."
-msgstr ""
+msgstr "Sie haben keine Berechtigung, Beziehungen dieses Kontakts zu bearbeiten."
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Relationships for"
@@ -4373,8 +4373,8 @@ msgstr "Doppelter Wert für Externe ID"
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact SubType field of 1 contact has not been updated."
 msgid_plural "Contact SubType field of %count contacts has not been updated."
-msgstr[0] "Kontakt SubType Feld von %count Kontakten konnten nicht aktualisiert werden."
-msgstr[1] "Das Kontakt SubType Feld von %count Kontakten konnten nicht aktualisiert werden."
+msgstr[0] "Kontaktunterarten-Felder von einem Kontakt wurde nicht aktualisiert."
+msgstr[1] "Kontaktunterarten-Felder von %count Kontakten wurden nicht aktualisiert."
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Invalid Subtype"
@@ -24947,7 +24947,7 @@ msgstr "Profilfeld"
 
 #: CRM/UF/Form/Field.php
 msgid "You have already added a primary location field of this type: %1"
-msgstr ""
+msgstr "Sie haben bereits ein Feld des Typs %1 mit der Kategorie Hauptadresse hinzugefügt."
 
 #: CRM/UF/Page/Group.php
 msgid "Use Profile-Listings Mode"
@@ -25853,14 +25853,14 @@ msgstr[1] ""
 #: CRM/Activity/Form/Task/Delete.php
 msgid "1 could not be deleted."
 msgid_plural "%count could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 konnte nicht gelöscht werden."
+msgstr[1] "%count konnten nicht gelöscht werden."
 
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "%count activity un-tagged"
 msgid_plural "%count activities un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Tags von einer Aktivität entfernt"
+msgstr[1] "Tags von %count Aktivitäten entfernt"
 
 #: CRM/Activity/Page/AJAX.php CRM/Activity/Selector/Search.php
 msgid "Repeating (%1 of %2)"
@@ -25884,7 +25884,7 @@ msgstr "Gruppe(n) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
-msgstr ""
+msgstr "Gruppenstatus %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Greeting %1 %2"
@@ -26301,11 +26301,11 @@ msgstr "Nachrichtenvorlagen bearbeiten"
 
 #: CRM/Core/Permission.php
 msgid "view my invoices"
-msgstr ""
+msgstr "meine Rechnungen anzeigen"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
-msgstr ""
+msgstr "Benutzern gestatten, eigene Rechnungen anzuzeigen und herunterzuladen"
 
 #: CRM/Core/Resources.php
 msgid "Upcoming"
@@ -26392,7 +26392,7 @@ msgstr ""
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Formatting"
-msgstr ""
+msgstr "Formatierung"
 
 #: CRM/Utils/Check/Security.php
 msgid ""
@@ -26439,7 +26439,7 @@ msgstr "Stellen Sie sicher, dass sie noch eingeloggt sind und ob Sie für dieses
 
 #: js/crm.ajax.js
 msgid "Print window"
-msgstr ""
+msgstr "Fenster drucken"
 
 #: js/jquery/jquery.crmeditable.js packages/HTML/QuickForm/ckeditor.php
 #: packages/HTML/QuickForm/tinymce.php
@@ -26454,7 +26454,7 @@ msgstr ""
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
-msgstr ""
+msgstr "Sind Sie sich sicher, dass folgendes gelöscht werden soll?"
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "New Activity"
@@ -26481,13 +26481,13 @@ msgstr "Kontakttyp: %1"
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Kontakte werden basierend auf den definierten Suchkriterien der Gruppe hinzugefügt bzw. entfernt."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
 "NOTE: Even if only a few contacts have been selected from the search "
 "results, all contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "HINWEIS: Eine manuelle Auswahl von Kontakten aus dem Suchergebnis heraus wird ignoriert - alle Kontakte, die die Kriterien erfüllen, werden der Gruppe hinzugefügt."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
