--- a/po/de_DE/member.po
+++ b/po/de_DE/member.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-06 09:32+0000\n"
+"PO-Revision-Date: 2016-02-08 09:17+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2381,7 +2381,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status(s)"
-msgstr ""
+msgstr "Mitgliedschaftsstatus"
 
 #: CRM/Member/Form/Membership.php
 msgid "Office Credit Card Membership Signup Contribution"
@@ -2403,13 +2403,13 @@ msgstr ""
 msgid ""
 "You need to enable Separate Membership Payment when online contribution page"
 " is configured for both Membership and Recurring Contribution"
-msgstr ""
+msgstr "Separate Mitgliedschaftszahlungen müssen aktiviert sein, wenn die Spendenseite für Mitgliedschaften und wiederkehrende Zahlungen konfiguriert ist."
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid ""
 "You cannot enable both Recurring Contributions and Auto-renew memberships on"
 " the same online contribution page"
-msgstr ""
+msgstr "Es ist nicht möglich, wiederkehrende Zahlungen und Mitgliedschaften mit automatischer Erneuerung auf derselben Spendenseite zu aktivieren."
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid ""
@@ -2490,7 +2490,7 @@ msgstr "Fristende aufheben"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to %1 ?"
-msgstr ""
+msgstr "Möchten Sie eine Bestätigungs-E-Mail und Zahlungsinformationen an %1 schicken?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
