--- a/po/de_DE/pcp.po
+++ b/po/de_DE/pcp.po
@@ -6,7 +6,7 @@
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2012,2014
 # pantteri, 2013
-# Fabian <schuttenberg@systopia.de>, 2015
+# Fabian <schuttenberg@systopia.de>, 2015-2016
 # MichaSeidler <info@euroconsults.eu>, 2012
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2016
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:06+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-02-08 09:04+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -500,7 +500,7 @@ msgstr "Wenn \"Persönliche Kampagnenseiten\" aktiviert sind, wird nach einer On
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid "Approval"
-msgstr ""
+msgstr "Zustimmung"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
