--- a/po/de_DE/pledge.po
+++ b/po/de_DE/pledge.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 11:36+0000\n"
+"PO-Revision-Date: 2016-02-08 09:05+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -856,11 +856,11 @@ msgstr "Klicken Sie <a %1>Unterstützungszusage hinzufügen</a> um eine neue Zuw
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "Kontakt ID %1 %2"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Name des Unterstützers"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
