--- a/po/de_DE/extension.po
+++ b/po/de_DE/extension.po
@@ -5,6 +5,7 @@
 # Translators:
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2014
+# Fabian <schuttenberg@systopia.de>, 2016
 # Martin Peth <peth@systopia.de>, 2015
 # metalmatze <matthias.hahn@web.de>, 2014
 # Fabian <schuttenberg@systopia.de>, 2013
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-08 09:03+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -103,7 +104,7 @@ msgstr ""
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "Ihr Verzeichnis für Erweiterungen ist nicht festgelegt oder schreibgeschützt. Klicken Sie <a href='%1'>hier</a> um ein Verzeichnis festzulegen"
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
