--- a/po/de_DE/case.po
+++ b/po/de_DE/case.po
@@ -7,7 +7,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011
 # pantteri, 2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2014
-# Fabian <schuttenberg@systopia.de>, 2014
+# Fabian <schuttenberg@systopia.de>, 2014,2016
 # Felix Kamella <felix.kamella@lobbycontrol.de>, 2012
 # Martin Peth <peth@systopia.de>, 2013-2015
 # Martin Peth <peth@systopia.de>, 2012
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-08 09:07+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1225,11 +1225,11 @@ msgstr "Zeige Aktivität"
 
 #: CRM/Case/Form/Activity.php
 msgid "Do you want to <a %1>edit the existing activity</a>?"
-msgstr ""
+msgstr "Möchten Sie <a %1>die bestehende Aktivität bearbeiten</a>?"
 
 #: CRM/Case/Form/Activity.php
 msgid "%1 Saved"
-msgstr ""
+msgstr "%1 gespeichert"
 
 #: CRM/Case/Form/Task/Delete.php
 msgid "%count case moved to trash."
