po: update po/de_DE/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/financial.po
+++ b/po/de_DE/financial.po
@@ -5,7 +5,7 @@
 # Translators:
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Hanno <h.paul@praxis-habighorst.de>, 2013
 # Martin Peth <peth@systopia.de>, 2014-2015
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-16 16:26+0000\n"
+"PO-Revision-Date: 2016-02-08 09:06+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -953,15 +953,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Ablaufdatum"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
-msgstr ""
+msgstr "Versteckte Kontonummern"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "IP Address"
-msgstr ""
+msgstr "IP Adresse"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Taxable accounts should have Financial Account Type set to Liability."
