--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -30,7 +30,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-06 17:05+0000\n"
+"PO-Revision-Date: 2016-02-08 09:23+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1692,7 +1692,7 @@ msgstr "Dies ist der Titel, den Nutzer sehen, wenn sie eine Veranstaltungsvorlag
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Vorlage"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3874,13 +3874,13 @@ msgstr ""
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "Verantsaltungs-Profile bearbeiten"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Benutzern gestatten, veranstaltungsbezogene Profile für Onlineanmeldungen zu erstellen, bearbeiten und kopieren."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -3948,7 +3948,7 @@ msgstr ""
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "HINWEIS: Eine manuelle Auswahl von Kontakten aus dem Suchergebnis heraus wird ignoriert - alle Kontakte, die die Kriterien erfüllen, werden der Gruppe hinzugefügt."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
@@ -3961,7 +3961,7 @@ msgstr "sekundär"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Gesamtzahl Teilnehmende"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
