--- a/po/it_IT/member.po
+++ b/po/it_IT/member.po
@@ -8,12 +8,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
 # simone sandri <simone.povoscania@hotmail.it>, 2011
+# vodkina <mnemosyne@logioshermes.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-09 15:13+0000\n"
+"Last-Translator: vodkina <mnemosyne@logioshermes.org>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +33,7 @@ msgstr "Non è possibile salvare l' iscrizione perché non è possibile verifica
 
 #: CRM/Member/BAO/Membership.php CRM/Member/Form/MembershipView.php
 msgid "Membership Type:"
-msgstr "Tipo di iscrizione."
+msgstr "Tipo di iscrizione:"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Invalid Membership"
