po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 03:18+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-09 14:14+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -443,21 +443,21 @@ msgstr "Geselecteerde %1 type is verwijderd."
 
 #: CRM/Admin/Form/ParticipantStatus.php
 msgid "Selected participant status has been deleted."
-msgstr "Geselecteerde deelnemerstatus is verwijderd."
+msgstr "Geselecteerde deelnemersstatus is verwijderd."
 
 #: CRM/Admin/Form/ParticipantStatus.php
 msgid ""
 "Selected participant status has <strong>NOT</strong> been deleted; there are"
 " still participants with this status."
-msgstr "De geselecteerde deelnemerstatus is <strong>niet</strong> verwijderd; Er zijn nog deelnemers met deze status."
+msgstr "De geselecteerde deelnemersstatus is <strong>niet</strong> verwijderd; Er zijn nog deelnemers met deze status."
 
 #: CRM/Admin/Form/ParticipantStatus.php
 msgid "The Participant Status has been updated."
-msgstr "Deelnemerstatus is bijgewerkt"
+msgstr "Deelnemersstatus is bijgewerkt"
 
 #: CRM/Admin/Form/ParticipantStatus.php
 msgid "The new Participant Status has been saved."
-msgstr "De nieuwe deelnemerstatus is opgeslagen."
+msgstr "De nieuwe deelnemersstatus is opgeslagen."
 
 #: CRM/Admin/Form/ParticipantStatus.php
 msgid "The changes have not been saved."
@@ -1195,7 +1195,7 @@ msgstr "Als de grootte van de job kleiner is dan de batch limiet, dan heeft dat 
 
 #: CRM/Admin/Form/Setting/Mapping.php
 msgid "Settings - Mapping and Geocoding Providers"
-msgstr "Instellingen - Kaarten en Geocoding Leveranciers"
+msgstr "Instellingen - Landkaart en Geocoding Aanbieders"
 
 #: CRM/Admin/Form/Setting/Mapping.php
 #: templates/CRM/Admin/Form/Setting/Mapping.hlp
@@ -1625,7 +1625,7 @@ msgstr "Gebruikers zullen deze waarde niet langer kunnen kiezen bij het toevoege
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this Participant Status?"
-msgstr "Weet u zeker dat u deze deelnemerstatus uit wilt schakelen?"
+msgstr "Weet u zeker dat u deze deelnemersstatus uit wilt schakelen?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
@@ -2220,7 +2220,7 @@ msgid ""
 "Downloading this extension will provide you with new functionality. Please "
 "make sure that the extension you're installing or upgrading comes from a "
 "trusted source."
-msgstr "Door deze extensie te downloaden kunt u nieuwe functionaliteit toevoegen. Zorg ervoor dat u dit downloaden alleen van vertrouwde leveranciers doet."
+msgstr "Door deze extensie te downloaden kunt u functionaliteit toevoegen. Zorg ervoor dat u alleen download van betrouwbare aanbieders."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "New Scheduled Job"
@@ -2634,7 +2634,7 @@ msgstr "Moet een persoon met deze status meegeteld worden als deelnemer om het m
 msgid ""
 "If you allow users to select a Participant Status by including that field on"
 " a profile - only statuses with 'Public' visibility are listed."
-msgstr "Wanneer u gebruikers toestaat om een deelnemerstatus te kiezen door dat veld op te nemen in het profiel, worden alleen statussen waarvan de zichtbaarheid op 'Publiek' staat getoond."
+msgstr "Wanneer u gebruikers toestaat om een deelnemersstatus te kiezen door dat veld op te nemen in het profiel, worden alleen statussen met de zichtbaarheid 'Publiek' getoond."
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 #: templates/CRM/Admin/Page/PaymentProcessorType.tpl
@@ -2866,7 +2866,7 @@ msgid ""
 "Plugins for other address standardization services may be available from 3rd"
 " party developers. If installed, they will be included in the drop-down "
 "below."
-msgstr "Er kunnen invoegtoepassingen voor het standaardiseren van adressen beschikbaar zijn van andere leveranciers. Als die geïnstalleerd zijn, dan kunnen ze hier ook worden geselecteerd."
+msgstr "Er kunnen invoegtoepassingen voor het standaardiseren van adressen beschikbaar zijn bij andere aanbieders. Als die geïnstalleerd worden, dan kunnen ze hier ook worden geselecteerd."
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Address Standardization Provider."
@@ -3519,7 +3519,7 @@ msgid ""
 "require paid subscriptions depending on volume of requests and type of "
 "organization using the service. You should investigate each provider and "
 "select the best option for your requirements and usage patterns."
-msgstr "Nauwkeurigheid, dekking en ondersteuning voor zowel geocoding als kaarten kan per leverancier per gebied verschillen. Leveranciers kunnen betaling aanbieden of vragen afhankelijk van de hoeveelheid aanvragen en het type organisatie. Kies de leverancier die het beste aansluit op uw vereisten en manier van gebruik."
+msgstr "Nauwkeurigheid, dekking en ondersteuning van zowel geocoding als landkaarten kunnen per aanbieder en per gebied verschillen. Ze kunnen betaling aanbieden of vragen afhankelijk van de hoeveelheid aanvragen en het type organisatie. Kies de aanbieder die het beste aansluit op uw vereisten en manier van gebruik."
 
 #: templates/CRM/Admin/Form/Setting/Mapping.tpl
 msgid ""
@@ -3529,7 +3529,7 @@ msgid ""
 "required for mapping. Yahoo&rsquo;s geocoder will also automatically "
 "populate the postal code field. Mapping services allow your users to display"
 " addresses on a map."
-msgstr "CiviCRM heeft invoegtoepassingen voor meerdere soorten kaarten en geocoding leveranciers. Met geocoding kunnen uw gebruikers de plaatsen van hun contacten en evenementen tonen op een kaart, de adressen worden omgezet in een geografische locatie. Yahoo gebruikt automatisch de postcode. "
+msgstr "CiviCRM heeft invoegtoepassingen voor meerdere soorten landkaarten en geocoding aanbieders. Met geocoding kunnen uw gebruikers de plaatsen van hun contacten en evenementen tonen op een landkaart, de adressen worden omgezet in een geografische locatie. Yahoo gebruikt automatisch de postcode. "
 
 #: templates/CRM/Admin/Form/Setting/Mapping.tpl
 msgid ""
@@ -3551,13 +3551,13 @@ msgid ""
 "there is no geo-coding plugin for your selected mapping provider. You can "
 "leave the Geocoding fields blank if you are using Google as your mapping "
 "provider."
-msgstr "U kunt voor geocoding een andere leverancier kiezen, dit is nodig als er geen geocoding invoegtoepassing is van uw landkaartenleverancier.   U hoeft de geocoding velden niet in te vullen als u hiervoor Google gebruikt."
+msgstr "U kunt voor geocoding een andere aanbieder kiezen, dit is nodig als er geen invoegtoepassing voor geocoding is van uw landkaartenaanbieder.   U hoeft de geocoding-velden niet in te vullen als u hiervoor Google gebruikt."
 
 #: templates/CRM/Admin/Form/Setting/Mapping.tpl
 msgid ""
 "Enter the API key or Application ID associated with your geocoding provider "
 "(not required for Yahoo)."
-msgstr "Vul de API key of Application ID behorend bij uw geocoding leverancier in (niet nodig bij Yahoo)."
+msgstr "Vul de API-key of Application-ID behorend bij uw geocoding aanbieder in (niet nodig bij Yahoo)."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid "The number of minutes to cache dashlet content on dashboard."
@@ -4284,7 +4284,7 @@ msgstr "Opmaak van adressen op etiketten, invoerschermen en schermweergaven."
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Mapping and Geocoding"
-msgstr "Kaarten en geocoding"
+msgstr "Landkaarten en geocoding"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/Setting.tpl
@@ -4643,7 +4643,7 @@ msgid ""
 "tasks to run the enabled jobs. However, you can also <a href=\"%1\">run all "
 "scheduled jobs manually</a>, or run specific jobs from this screen (click "
 "'more' and then 'Execute Now')."
-msgstr "U kunt jobs inplannen voor uw CiviCRM installatie. De beheerder zal een of meer 'cron' tasks instellen om de ingeplande jobs uit te voeren.  U kunt echter ook <a href=\"%1\">handmatig alle ingeplande jobs uitvoeren</a>, of op dit scherm een job selecteren (Klik op 'meer' en dan op 'Nu uitvoeren')."
+msgstr "U kunt taken plannen in CiviCRM. De beheerder zal een of meer 'cron' taken instellen om de geplande taken uit te voeren.  U kunt echter ook <a href=\"%1\">handmatig alle geplande taken uitvoeren</a>, of op dit scherm een taak selecteren (Klik op 'meer' en dan op 'Nu uitvoeren')."
 
 #: templates/CRM/Admin/Page/Job.tpl
 msgid "Add New Scheduled Job"
