--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-04 19:10+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-09 14:12+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -613,7 +613,7 @@ msgstr "Betaalmethode"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mapping and Geocoding"
-msgstr "Landkaarten en geocoden"
+msgstr "Landkaarten en Geocoding"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1613,7 +1613,7 @@ msgstr "CiviEvent"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Participant Statuses"
-msgstr "Deelnemerstatussen"
+msgstr "Deelnemersstatussen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
