--- a/po/it_IT/financial.po
+++ b/po/it_IT/financial.po
@@ -7,12 +7,13 @@
 # Pietro De Nicolao <powerpdn@gmail.com>, 2013
 # LinoLinux <reni.marco@gmail.com>, 2014
 # Riccardo <ricma40@gmail.com>, 2013
+# vodkina <mnemosyne@logioshermes.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-09 15:11+0000\n"
+"Last-Translator: vodkina <mnemosyne@logioshermes.org>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +61,7 @@ msgid ""
 "This contact(s) can not be permanently deleted because the contact record is"
 " linked to one or more live financial transactions. Deleting this contact "
 "would result in the loss of financial data."
-msgstr ""
+msgstr "Questo(i) contatto(i) non può essere cancellato permanentemente perché il contatto memorizzato è collegato ad una o più transazioni finanziarie. La cancellazione di questo contatto comporterebbe la perdita di dati finanziari."
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
@@ -88,7 +89,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Invalid value passed to getPayment function"
-msgstr ""
+msgstr "E' stato passato un valore non valido alla funzione getPayment"
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
@@ -98,19 +99,19 @@ msgstr ""
 msgid ""
 "There is a Payment Processor associated with selected Payment Processor "
 "type, hence it can not be deleted."
-msgstr ""
+msgstr "Esiste un Sistema di Pagamento associato al tipo di Sistema di Pagamento selezionato, quindi non può essere eliminato."
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br>"
-msgstr ""
+msgstr "Il tipo di processore di pagamento selezionato è stato eliminato.<br>"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
-msgstr ""
+msgstr "Simbolo"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Numeric Code"
-msgstr ""
+msgstr "Codice Numerico"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
@@ -125,11 +126,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Trxn Date"
-msgstr ""
+msgstr "Data Trxn"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Trxn Result Code"
-msgstr ""
+msgstr "Codice risultato Trxn"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
@@ -138,11 +139,11 @@ msgstr ""
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Suffix for PHP clas name implementation"
-msgstr ""
+msgstr "Suffisso per l'implementazione del nome della classe PHP"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor variable name to be used in code"
-msgstr ""
+msgstr "Nome della variabile del gestore dei pagamenti da usare nel codice"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Title"
@@ -150,51 +151,51 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
-msgstr ""
+msgstr "Etichetta per il nome utente, se usato"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for password"
-msgstr ""
+msgstr "Etichetta per la password"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Signature"
-msgstr ""
+msgstr "Etichetta per la firma"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Subject"
-msgstr ""
+msgstr "Etichetta per l'oggetto"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Site URL"
-msgstr ""
+msgstr "URL sito reale predefinito"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default API Site URL"
-msgstr ""
+msgstr "URL API predefinita"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Recurring Payments URL"
-msgstr ""
+msgstr "URL pagamenti ricorrenti reale predefinito"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Live Button URL"
-msgstr ""
+msgstr "URL pulsante reale predefinito"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Site URL"
-msgstr ""
+msgstr "URL sito di test predefinito"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test API URL"
-msgstr ""
+msgstr "URL API di test predefinita"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Recurring Payment URL"
-msgstr ""
+msgstr "URL pagamenti ricorrenti di test predefinito"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Default Test Button URL"
-msgstr ""
+msgstr "URL pulsante di test predefinito"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Accounting Batch - %1"
@@ -210,11 +211,11 @@ msgstr "Transazioni Assegnate"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Entered Total"
-msgstr ""
+msgstr "Totale immesso"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assigned Total"
-msgstr ""
+msgstr "Totale assegnato"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Close & Export Batch"
@@ -222,7 +223,7 @@ msgstr "Chiudi ed esporta Batch"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "Task"
-msgstr ""
+msgstr "Attività"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -300,11 +301,11 @@ msgstr "Il numero di transazioni dovrebbe essere un numero positivo"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Total Amount should be a positive number"
-msgstr ""
+msgstr "L'Importo Totale dovrebbe essere un numero positivo"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Created date cannot be greater than current date"
-msgstr ""
+msgstr "La data creata non può essere futura alla data odiena"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "This name already exists in database. Batch names must be unique."
