po: update po/nl_NL/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-11 17:20+0000\n"
+"PO-Revision-Date: 2016-02-09 13:35+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -838,7 +838,7 @@ msgid ""
 "Your site administrator must configure the scheduled job (Administer > "
 "System Settings > Scheduled Jobs) which updates pledge payment statuses and "
 "sends the reminders."
-msgstr "Uw sitebeheerder moet de job configureren (Beheer > Systeeminstellingen > Ingeplande jobs) die de status van de betaling van de toezegging wijzigt en de herinneringen verstuurd."
+msgstr "Uw sitebeheerder moet de taak configureren (Beheer > Systeeminstellingen > Geplande taken) die de status van de betaling van de toezegging wijzigt en de herinneringen verstuurd."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
