po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 03:20+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-09 14:09+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11225,7 +11225,7 @@ msgstr "%1: %2"
 msgid ""
 "Error: You need to set a mapping provider under Administer > System Settings"
 " > Mapping and Geocoding"
-msgstr "Fout: er moet een een landkaartleverancier  ingesteld worden bij Systeeminstellingen > Kaarten en geocoding"
+msgstr "Fout: er moet een een landkaartaanbieder  ingesteld worden bij Systeeminstellingen > Landkaarten en Geocoding"
 
 #: CRM/Utils/Address/BatchUpdate.php
 msgid ""
@@ -18219,7 +18219,7 @@ msgstr "Stel zoeken op nabijheid verplicht als uw wilt dat alle zoekopdrachten d
 msgid ""
 "IMPORTANT: You must enable a Mapping Provider in order to use the Proximity "
 "Search feature (Administer > System Settings > Mapping and Geocoding)."
-msgstr "BELANGRIJK: U moet een landkaartleverancier instellen om op nabijheid te kunnen zoeken (Beheer > Systeeminstellingen >  Kaarten en Geocoding Leveranciers)."
+msgstr "BELANGRIJK: U moet een landkaartaanbieder instellen om op nabijheid te kunnen zoeken (Beheer > Systeeminstellingen >  Landkaart en Geocoding)."
 
 #: templates/CRM/UF/Form/Group.tpl
 msgid "Delete CiviCRM Profile"
@@ -25909,7 +25909,7 @@ msgstr[1] "Contact subtype veld van %count contacten zijn niet gewijzigd."
 msgid ""
 "You need to configure a Mapping Provider before using this feature "
 "(Administer > System Settings > Mapping and Geocoding)."
-msgstr "U dient eerst een landkaartleverancier in te stellen voordat u deze functie kunt gebruiken (Beheer > Systeeminstellingen > Kaarten en Geocoding Leveranciers)."
+msgstr "U dient eerst een landkaartaanbieder in te stellen voordat u deze functie kunt gebruiken (Beheer > Systeeminstellingen > Landkaarten en Geocoding)."
 
 #: CRM/Contact/Import/Form/Preview.php CRM/Import/Form/Preview.php
 msgid "Import Now"
@@ -26205,7 +26205,7 @@ msgstr "Wijzigen en uitschakelen gereserveerde groepen (ook nodig: Wijzigen groe
 
 #: CRM/Core/Permission.php
 msgid "Create and edit rules, change the supervised and unsupervised rules"
-msgstr "Aanmaken en wijzigen regels, wijzigen regels  leidinggevende / geen leidinggevende"
+msgstr "Aanmaken en wijzigen regels, wijzigen regels onder/zonder toezicht"
 
 #: CRM/Core/Permission.php
 msgid "Delete Contacts must also be granted in order for this to work."
