po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-27 03:13+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-10 19:19+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3068,7 +3068,7 @@ msgstr "Indien ingeschakeld, worden er links getoond waarmee de gebruikers de bi
 msgid ""
 "Social media links will be included on the Contribution Thank-you page, "
 "Tell-a-Friend page (if enabled), and in contribution receipt emails."
-msgstr "Deze sociale media links worden gebruikt op de bijdrage bedankpagina, de informeer-een-vriend-pagina (indien ingeschakeld) en in de ontvangst e-mail van bijdragen."
+msgstr "Deze sociale media links worden gebruikt op de bijdrage bedankpagina, de mond-tot-mondreclame-pagina (indien ingeschakeld) en in de ontvangst e-mail van bijdragen."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3267,7 +3267,7 @@ msgid ""
 "Enter link(s) and/or text that you want to appear at the bottom of the "
 "thank-you page. You can use this content area to encourage contributors to "
 "visit a tell-a-friend page or take some other action."
-msgstr "Voer de link(s) en/of tekst in die u onderaan de bedankpagina wilt tonen. U kunt deze bijvoorbeeld  gebruiken, om gevers aan te moedigen een informeer-een-vriend-pagina te bezoeken of om een andere actie te ondernemen."
+msgstr "Voer de link(s) en/of tekst in die u onderaan de bedankpagina wilt tonen. U kunt deze bijvoorbeeld  gebruiken, om gevers aan te moedigen een mond-tot-mondreclame-pagina te bezoeken of om een andere actie te ondernemen."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.tpl
 msgid ""
