po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-09 14:09+0000\n"
+"PO-Revision-Date: 2016-02-10 18:58+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -25859,7 +25859,7 @@ msgstr "Groep(en) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
-msgstr "Groepstatus %1"
+msgstr "Groepsstatus %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Greeting %1 %2"
