po: update po/nl_NL/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # Kevin Levie <kevin@levity.nl>, 2016
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-01-27 03:13+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-10 19:40+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -453,7 +453,7 @@ msgid ""
 "a way to allow community members ('users') to update their own information, "
 "as well as share some of that information with others. Finally, you can "
 "configure custom activity types such as volunteering or attending events."
-msgstr "De CiviCRM module maakt het mogelijk om contacten te creëren of te importeren. Relaties tussen contacten, zoals \"zelfde huishouding\" kunnen opgeslagen worden. Er zijn 2 groepen contacten : statische groepen met een vaste lijst contacten en dynamische (smart) groepen, die bepaalde eigenschappen gemeen hebben. Een voorbeeld : Iedereen die in de Benelux woont en het afgelopen jaar als vrijwilliger voor uw organisatie heeft gewerkt. CiviCRM staat ook de wat minder formele indeling van contacten of groepen toe. Door specifieke velden in de database van CiviCRM te gebruiken, is het mogelijk, om specifieke ledeninformatie op te bouwen binnen uw gemeenschap. Op die manier kan er een lijst worden gecreëerd van specifieke vakkennis en voorkeuren van leden in de gemeenschap. De Profiel sectie geeft de leden de mogelijkheid, om hun gegevens bij te werken en te delen met anderen. Ook is het mogelijk, om Activiteitstypes (zoals vrijwilligerswerk, of evenementen) op te stellen."
+msgstr "De CiviCRM module maakt het mogelijk om contacten te creëren of te importeren. Relaties tussen contacten, zoals \"zelfde huishouding\" kunnen opgeslagen worden. Er zijn 2 groepen contacten : statische groepen met een vaste lijst contacten en dynamische (smart) groepen, die bepaalde eigenschappen gemeen hebben. Een voorbeeld : Iedereen die in de Benelux woont en het afgelopen jaar als vrijwilliger voor uw organisatie heeft gewerkt. CiviCRM staat ook de wat minder formele indeling van contacten of groepen toe. Door specifieke velden in de database van CiviCRM te gebruiken, is het mogelijk, om specifieke ledeninformatie op te bouwen binnen uw gemeenschap. Op die manier kan er een lijst worden gecreëerd van specifieke vakkennis en voorkeuren van leden in de gemeenschap. De Profiel sectie geeft de leden de mogelijkheid, om hun gegevens bij te werken en te delen met anderen. Ook is het mogelijk, om activiteitstypes (zoals vrijwilligerswerk, of evenementen) op te stellen."
 
 #: drupal/civicrm.module
 msgid "You can:"
@@ -1033,7 +1033,7 @@ msgstr "Het ID van het evenement"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Event Type"
-msgstr "Het Evenementstype"
+msgstr "Het evenementstype"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Public"
