--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-09 14:12+0000\n"
+"PO-Revision-Date: 2016-02-10 18:57+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -844,7 +844,7 @@ msgstr "Groepen"
 
 msgctxt "menu"
 msgid "Smart Groups"
-msgstr "Slimme groepen"
+msgstr "Smartgroepen"
 
 msgctxt "menu"
 msgid "Sunlight"
@@ -1007,7 +1007,7 @@ msgstr "Inschrijving bevestigen"
 
 msgctxt "menu"
 msgid "Current and Upcoming Events"
-msgstr "Actuele en toekomstige evenementen"
+msgstr "Actuele en aanstaande evenementen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
